--- a/index.html
+++ b/index.html
@@ -37,8 +37,7 @@
     </header>
 
     <main id="content" class="main-content" role="main">
-      <h1 id="martin-mackintosh">Martin Mackintosh</h1>
-<p>Ahoy there, I’m Martin!</p>
+<h2>Ahoy there, I’m Martin!</h2>
 <h3 id="about-me">About me</h3>
 <ul>
   <li>I’m learning Golang</li>
